# btdt

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  btdt-cli.Dockerfile  btdt-server.Dockerfile  cli-reference.html  getting-started.html  getting_started.html  index.html  install.html  intro.html  print.html  release-plz.toml  searcher-c2a407aa.js  searchindex-1906fcca.js  searchindex-1cfe71d3.js  searchindex-2243010f.js  searchindex-236dd065.js  searchindex-25295356.js  searchindex-3710117f.js  searchindex-55a29348.js  searchindex-5b3a462d.js  searchindex-6eae0d40.js  searchindex-84f10408.js  searchindex-850161a5.js  searchindex-9d5f9626.js  searchindex.js  searchindex.json  toc-0932531f.js  toc-7bb95ebd.js  toc-89348b07.js  toc.html  toc.js
.github/workflows/: binaries.yml  doc.yml  docker.yml
btdt/: Cargo.toml
btdt-cli/: Cargo.toml
btdt-cli/src/: hashing.rs  humanbytes.rs  main.rs
btdt-cli/tests/: cache_fixture.rs  test_cli.rs  test_cli_clean.rs
btdt-cli/tests/cache_fixture/: mod.rs
btdt-cli/tests/cli/: .gitignore  clean-supports-human-units.toml  hash-directory-tree.toml  hash-multiple-files.toml  hash-non-existent.toml  hash-single-file.toml  restore-first-matched-key-comma-separated.toml  restore-first-matched-key.toml  restore-non-existent-cache.toml  restore-non-existent-key.toml  restore-primary-key.toml  restore-success-rc-on-any-key.toml  store-non-existent-source.toml
btdt-cli/tests/cli/_cache-fixture/blob/nb/: cjgilquum15f0zahxbakuwci
btdt-cli/tests/cli/_cache-fixture/meta/dq/: other-cache-key
btdt-cli/tests/cli/_cache-fixture/meta/wq/: cache-key-0
btdt-cli/tests/cli/restore-first-matched-key.in/cache/meta/dskq/: other-cache-key
btdt-cli/tests/cli/restore-non-existent-key.in/cache/blob/ae/: ooyi1poctwumiuhozf1pft4i
btdt-cli/tests/cli/restore-non-existent-key.in/cache/meta/nrra/: cache-key-1
btdt-server/: CHANGELOG.md  Cargo.toml  authorization.html  configuration.html  deployment.html
btdt-server/benches/: asyncio.rs
btdt-server/lib/: asyncio.rs  lib.rs  test_server.rs
btdt-server/src/: app.rs  config.rs  main.rs  storage.rs
btdt-server/src/app/: api.rs  asyncio.rs  cache_dispatcher.rs  get_from_cache.rs
btdt-server/tests/: config.rs  integration.rs  tls.rs
btdt-server/tests/test_server/: mod.rs
btdt-server/tests/tls/: .gitignore  ca.cnf  ca.key  leaf.csr  recreate-certificate.sh
btdt/benches/: io.rs
btdt/src/: cache.rs  error.rs  lib.rs  pipeline.rs  storage.rs
btdt/src/cache/: blob_id.rs  cache_dispatcher.rs  local.rs  meta.rs  remote.rs
btdt/src/cache/remote/: error.rs  http.rs
btdt/src/storage/: filesystem.rs  in_memory.rs  mod.rs  tests.rs
btdt/src/storage/filesystem/: staged_file.rs
btdt/src/storage/in_memory/: dir_node.rs  file_node.rs  path_iter.rs
btdt/src/test_util/: fs.rs  fs_spec.rs
btdt/src/util/: close.rs  humanbytes.rs
btdt/src/util/http/: error.rs  mod.rs
ci-guides/: jenkins.html  overview.html  tekton-pvc.html  tekton-server.html  tekton.html
doc/: book.toml
doc/src/: SUMMARY.md  cli-reference.md  getting-started.md  getting_started.md  install.md
doc/src/btdt-server/: authorization.md  configuration.md  deployment.md
doc/src/ci-guides/: jenkins.md  overview.md  tekton-pvc.md  tekton-server.md  tekton.md
src/: cache.rs  clock.rs  close.rs  encoding.rs  lib.rs  pipeline.rs  storage.rs
src/cache/: blob_id.rs  local.rs  meta.rs
src/storage/: filesystem.rs  in_memory.rs  tests.rs
src/storage/filesystem/: staged_file.rs
src/storage/in_memory/: dir_node.rs  file_node.rs  file_reader.rs
src/util/: clock.rs
tests/cli/: store-non-existent-cache.toml  store-non-existent-source.toml
tests/cli/_cache-fixture/meta/wrfq/: cache-key-0
tests/cli/restore-non-existent-key.in/cache/meta/dskq/: other-cache-key
tls/: ca.pem  leaf.key  leaf.p12  leaf.pem  openssl.cnf
