[package]
name = "btdt"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5.5"
chrono = "0.4.39"
data-encoding = "2.7.0"
data-encoding-macro = "0.1.16"
rand = { version = "0.8.5", features = ["std_rng"] }
rkyv = { version = "0.7.45", features = ["validation"] }

[dev-dependencies]
tempfile = "3.15.0"
