[package]
name = "btdt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
data-encoding = "2.7.0"
data-encoding-macro = "0.1.16"
rand = { version = "0.9.0", features = ["std_rng"] }
rkyv = "0.8.10"
tar = "0.4.43"

[dev-dependencies]
tempfile = "3.15.0"
trycmd = "0.15.8"
