[package]
name = "btdt-cli"
version = "0.1.0"
edition = "2021"
default-run = "btdt"
authors = ["Jan Gosmann"]
documentation = "https://jgosmann.github.io/btdt/"
description = "\"been there, done that\" - a tool for flexible CI caching"
repository = "https://github.com/jgosmann/btdt"
license = "MIT OR Apache-2.0"
keywords = ["ci", "cache", "tekton", "cli"]
categories = ["caching", "command-line-utilities"]
readme = "../README.md"

[[bin]]
name = "btdt"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.95"
btdt = { path = "../btdt", version = "0.1.0" }
blake3 = "1.5.5"
clap = { version = "4.5.27", features = ["derive", "unstable-markdown"] }
humantime = "2.1.0"
chrono = "0.4.39"

[dev-dependencies]
rand = { version = "0.9.0", features = ["std_rng"] }
tempfile = "3.15.0"
trycmd = "0.15.8"
