[package]
name = "btdt-server"
version = "0.1.0"
edition = "2024"
authors = ["Jan Gosmann"]
documentation = "https://jgosmann.github.io/btdt/"
description = "Server component for \"been there, done that\" - a tool for flexible CI caching"
repository = "https://github.com/jgosmann/btdt"
license = "MIT OR Apache-2.0"
keywords = ["ci", "cache", "tekton", "cli"]
categories = ["caching"]
readme = "../README.md"

[lib]
name = "asyncio"
path = "lib/asyncio.rs"

[dependencies]
btdt = { path = "../btdt", version = "0.1.0" }
bytes = "1.10.1"
config = { version = "0.15.13", features = ["toml"] }
futures-core = "0.3.31"
poem = { version = "3", features = ["native-tls"] }
poem-openapi = { version = "5", features = ["swagger-ui"] }
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync"] }
tokio-util = { version = "0.7.16", features = ["io", "io-util"] }
data-encoding = "2.9.0"
chrono = "0.4.42"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["cargo_bench_support", "plotters", "rayon", "async_tokio"] }
fs2 = "0.4.3"
poem = { version = "3", features = ["test"] }
rand_core = "0.9.3"
rand_xoshiro = "0.7.0"
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }
serial_test = "3.2.0"
tempfile = "3.15.0"
tokio-stream = "0.1.17"

[[bench]]
name = "asyncio"
harness = false
