[package]
name = "btdt"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5.5"
chrono = "0.4.39"
data-encoding = "2.7.0"
data-encoding-macro = "0.1.16"
rand = { version = "0.9.0", features = ["std_rng"] }
rkyv = "0.8.10"
tar = "0.4.43"
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3.15.0"
