[package]
name = "btdt"
version = "0.3.3"
edition = "2024"
authors = ["Jan Gosmann"]
description = "\"been there, done that\" - a tool for flexible CI caching"
repository = "https://github.com/jgosmann/btdt"
license = "MIT OR Apache-2.0"
keywords = ["ci", "cache", "tekton"]
categories = ["caching"]
readme = "../README.md"

[dependencies]
blake3 = "1.5.5"
chrono = "0.4.39"
data-encoding = "2.7.0"
data-encoding-macro = "0.1.16"
rand = { version = "0.9.0", features = ["std_rng"] }
rkyv = "0.8.10"
rustls = "0.23.34"
rustls-platform-verifier = "0.5.0"
tar = "0.4.43"
url = "2.5.7"
fs2 = "0.4.3"
biscuit-auth = "6.0.0"

[dev-dependencies]
criterion = "0.7.0"
rand_xoshiro = "0.7.0"
tempfile = "3.15.0"

[[bench]]
name = "io"
harness = false
